<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fiapbg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_title"
        android:textColor="#E80950"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/app_subtitle"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imc"
        app:layout_constraintTop_toBottomOf="@+id/imc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAdress"
        android:background="@drawable/shape"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/email_24"
        android:drawablePadding="8dp"
        android:drawableTint="#E70950"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="6dp"
        android:paddingVertical="10dp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#6F000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPersonName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/password_24"
        android:drawablePadding="8dp"
        android:drawableTint="#E70950"
        android:ems="10"
        android:hint="@string/password"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingHorizontal="6dp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:textColorHint="#6F000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#E60950"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/new_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/logo_btn"
        android:layout_width="150dp"
        android:layout_height="106dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitXY"
        android:text="@string/fiap"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/TextPersonName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/user"
        android:drawablePadding="8dp"
        android:drawableTint="#E70950"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingHorizontal="6dp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:textColorHint="#6F000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="name" />

</androidx.constraintlayout.widget.ConstraintLayout>